# kuzushiji

./: CMakeLists.txt  README.md  measure.sh  run-2025-01-16T20:47+01:00
runs/: run-2025-01-16T12:17+01:00  run-2025-01-16T17:51+01:00  run-2025-01-16T20:47+01:00
src/: main.cpp  network.cpp  network.h  reader.cpp  reader.h
